Fixed nav overflow

--- a/src/styles/component_styles/Navbar.css
+++ b/src/styles/component_styles/Navbar.css
@@ -12,6 +12,7 @@
     padding-left: 50px;
     align-items: center;
     box-sizing:border-box;
+    overflow: hidden;
     overflow-x: auto;
 }
 
